# LVGL-SDL2-Simulator

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h
main/src/: main.c
src/: main.c
